--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from haroldcabrera.com/presentation/landing-page-projects/exposure/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 25 Oct 2019 09:33:57 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -206,8 +203,7 @@
             </div>
         </div>
     </div>
-    <script src="../../../../cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.12.0/js/md5.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
-<!-- </html> -->
+</html>
